--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <html>
 	<head>		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Vladimir Zaytsev</title>
+		<link type="image/x-icon" href="favicon.png" rel="icon"/>
+		<link rel="stylesheet" href="style.css" />
+		<!-- <script src='script.js' type='text/javascript' charset='utf-8'></script> -->
 	</head>
 	<body>
-		<span>It works!</span>
+		<span>It's working!</span>
+		<script type="text/javascript">
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-22010949-1']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
 	</body>
 </html>
