--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Vladimir Zaytsev</title>
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
-		<link rel="stylesheet" href="style.css" />
-		<!-- <script src='script.js' type='text/javascript' charset='utf-8'></script> -->
+		<link rel="stylesheet" href="css/style.css" />
+		<!-- <script src='js/script.js' type='text/javascript' charset='utf-8'></script> -->
 	</head>
 	<body>
-		<span>It's working!</span>
+		<header></header>
+		<div id="container">
+			<div id="myname"><span>Vladimir Zaytsev</span></div>
+			<div id="social">
+				<a href="">Facebook</a>
+				<a href="">Twitter</a>
+				<a href="">LinkedIn</a>
+				<a href="">Github</a>
+			</div>
+		</div>
+		<footer></footer>
+		
 		<script type="text/javascript">
 
 		  var _gaq = _gaq || [];
@@ -21,7 +32,7 @@
 		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
-
+			alert("js works");
 		</script>
 	</body>
 </html>
