--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<header></header>
 		<div id="container">
 			<div id="myname"><span>Vladimir Zaytsev</span></div>
-			<div id="social">
+			<!-- <div id="social">
 				<a href="">Facebook</a>
 				<a href="">Twitter</a>
 				<a href="">LinkedIn</a>
 				<a href="">Github</a>
-			</div>
+			</div> -->
 		</div>
 		<footer></footer>
 		
@@ -32,7 +32,6 @@
 		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
-			alert("js works");
 		</script>
 	</body>
 </html>
