--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 		<!-- <script src='script.js' type='text/javascript' charset='utf-8'></script> -->
 	</head>
 	<body>
-		<span>404</span>
+		<span>soon</span>
 		<script type="text/javascript">
 
 		  var _gaq = _gaq || [];
