--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
 		<title>Vladimir Zaytsev</title>
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
 		<link rel="stylesheet" href="css/style.css" />
-		<!-- <script src='js/script.js' type='text/javascript' charset='utf-8'></script> -->
 	</head>
 	<body>
 		<header></header>
 		<div id="container">
 			<div id="myname"><span>Vladimir Zaytsev</span></div>
-			<!-- <div id="social">
-				<a href="">Facebook</a>
-				<a href="">Twitter</a>
-				<a href="">LinkedIn</a>
-				<a href="">Github</a>
-			</div> -->
+			
+			<div id="contacts">
+				<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
+				<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
+				<a class="github" href="https://github.com/zaycev">Github</a>
+				<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
+				<a class="phone" href="skype:+79028195844?call">+790281095844</a>
+				<a class="cv" href="files/Vladimir-Zaytsev-CV-03-2011.pdf">CV</a>
+			</div>
+			
 		</div>
 		<footer></footer>
 		
