--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<a class="github" href="https://github.com/zaycev">Github</a>
 				<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
 				<a class="phone" href="skype:+79028195844?call">+790281095844</a>
-				<a class="cv" href="files/Vladimir-Zaytsev-CV-03-2011.pdf">CV</a>
+				<!-- <a class="cv" href="files/Vladimir-Zaytsev-CV-03-2011.pdf">CV</a> -->
 			</div>
 			
 		</div>
