--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
 				<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
 				<a class="github" href="https://github.com/zaycev">Github</a>
+				<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
 				<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
 				<a class="phone" href="skype:+79028195844?call">+790281095844</a>
 				<!-- <a class="cv" href="files/Vladimir-Zaytsev-CV-03-2011.pdf">CV</a> -->
