--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<head>		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="google-site-verification" content="2y7ZrCwLmzHR7TeLDlLw1NvA5q1hM_k1zaMcKZMw0MM" />
+		<meta name="author" content="Vladimir Zaytsev" />
+		<meta name="description" content="Vladimir Zaytsev. Software engineer from Siberia. Home page." />
+		<meta name="keywords" content="vladimir zaytsev, home page, os x, linux, programming, c++, functional programming, erlang, lisp, haskell, programming, software engineering, software developing,  python, cv, программирование, функциональное программирование, владимир зайцев" />
 		<title>Vladimir Zaytsev</title>
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
 		<link rel="stylesheet" href="css/style.css" />
