--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header></header>
 		<div id="container">
 			<div id="myname"><span>Vladimir Zaytsev</span></div>
-			<div id="summary"><span>Software engineer from Siberia</span></div>
+			<!-- <div id="summary"><span>Software engineer from Siberia</span></div> -->
 			<div id="contacts">
 				<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
 				<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
