--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 	</head>
 	<body>
 		<header></header>
-		<div id="container">
-			<div id="myname"><span>Vladimir Zaytsev</span></div>
-			<!-- <div id="summary"><span>Software engineer from Siberia</span></div> -->
-			<div id="contacts">
+		<div class="zvm-container" style="width:400px;height:330px;">
+			<div class="zvm-container-title">Vladimir Zaytsev</div>
+			<div class="zvm-contacts">
 				<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
 				<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
 				<a class="github" href="https://github.com/zaycev">Github</a>
 				<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
+				<a class="projects" href="projects.html">Projects</a>
+				<a class="cv" href="files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
 				<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
-				<a class="phone" href="skype:+79028195844?call">+79028195844</a>
-				<!-- <a class="cv" href="files/Vladimir-Zaytsev-CV-03-2011.pdf">CV</a> -->
+				<a class="phone" href="skype:+79028195844?call">+7-902-81-95844</a>
 			</div>
-			
 		</div>
 		<footer></footer>
 		
