--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
 		<div class="zvm-container" style="width:400px;height:330px;">
 			<div class="zvm-container-title">Vladimir Zaytsev</div>
 			<div class="zvm-contacts">
-				<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
-				<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
-				<a class="github" href="https://github.com/zaycev">Github</a>
-				<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
-				<!-- <a class="projects" href="projects.html">Projects</a> -->
-				<a class="cv" href="files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
-				<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
-				<a class="phone" href="skype:+79028195844?call">+7-902-81-95844</a>
+				<nav>
+					<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
+					<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
+					<a class="github" href="https://github.com/zaycev">Github</a>
+					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
+					<a class="projects" href="projects.html">Projects</a>
+					<a class="cv" href="files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
+					<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
+					<a class="phone" href="skype:+79028195844?call">+7-902-81-95844</a>
+				</nav>
 			</div>
 		</div>
-		<footer></footer>
+		<footer>
+			<a target=_blank href="mailto:vladimir@zvm.me">zvm.me © Vladimir Zaytsev - Владимир Зайцев, 2011</a>
+		</footer>
 		
 		<script type="text/javascript">
 
