--- a/projects.html
+++ b/projects.html
@@ -13,37 +13,69 @@
 	</head>
 	<body>
 		<header></header>
-		<div class="zvm-container" style="width:700px;height:800px;">
+		<div class="zvm-container" style="width:800px;height:900px;">
 			
-			<div class="zvm-container-title">Projects</div>
-			<div class="xlarge">Current Projects:</div>
+			<div class="zvm-container-title"><a href="/">Vladimir Zaytsev</a> <span class="light">/</span> Projects</div>
+			<div class="xlarge gray">Current Projects:</div>
 			<div class="zvm-container-section">
 				<div class="item">
-					<div class="medium">Event Flows <span class="small">(2011)</span> <span class="right small">Erlang, JavaScript</span></div>
+					<div class="medium">
+						<header class="black">Event Flows</header>
+						<span class="small light">april, 2011 - current</span>
+						<span class="right small light">Erlang, JavaScript</span>
+					</div>
 					<span class="small">
 						web service for creating user events, widgets and getting statistics
 					</span>
 					<br/>
-					<a href="http://eventflows.net">http://eventflows.net</a>
+					<!-- <a href="http://eventflows.net">http://eventflows.net</a> -->
 				</div>
 			</div>
 			<div class="zvm-container-section">
 				<div class="item">
-					<div class="medium">E2C <span class="small">(2010-2011)</span> <span class="right small">Erlang, JavaScript</span></div>
+					<div class="medium">
+						<header class="black">E2C</header>
+						<span class="small light">november, 2010 - current</span>
+						<span class="right small light">Erlang, JavaScript</span>
+					</div>
 					<span class="small">
 						an experimental web-platform for education-consumer networks
 					</span>
 					<br/>
 					<span>source code:</span> <a href="https://github.com/zaycev/e2c">https://github.com/zaycev/e2c</a>
 					<br/>
-					<span>screenshots:</span> <a href="/e2c/1.png">[1]</a> <a href="/e2c/1.png">[2]</a> <a href="/e2c/1.png">[3]</a>
+					<span>screenshots:</span>
+						<a href="e2c/1.png">[1]</a>
+						<a href="e2c/2.png">[2]</a>
+						<a href="e2c/3.png">[3]</a>
+						<a href="e2c/4.png">[4]</a>
+						<a href="e2c/5.png">[5]</a>
+						<a href="e2c/6.png">[6]</a>
+						<a href="e2c/7.png">[7]</a>
+				</div>
+			</div>
+			<div class="zvm-container-section">
+				<div class="item">
+					<div class="medium">
+						<header class="black">NIF JSON Encoder/Decoder</header>
+						<span class="small light">april, 2011 - current</span>
+						<span class="right small light">C, Erlang</span>
+					</div>
+					<span class="small">
+						a fast JSON encoder/decoder capable with erlang's rfc4627 library format
+					</span>
 				</div>
 			</div>
 			
-			<div class="xlarge">Other Projects:</div>
+			
+			<div class="xlarge gray">Other Projects:</div>
 			<div class="zvm-container-section">
 				<div class="item">
-					<div class="medium">TGS <span class="small">(2009-2010)</span> <span class="right small">Erlang, Python, C#, C/C++</span></div>
+					<div class="medium">
+						<header class="black">TGS</header>
+						<span class="small light">april, 2009 - june 2009; september, 2009 - march, 2010</span>
+						<span class="right small light">Erlang, Python, C#, C/C++</span>
+					</div>
 					<span class="small">
 						applications for facts extracting from Job Description texts
 					</span>
@@ -53,31 +85,42 @@
 			</div>
 			<div class="zvm-container-section">
 				<div class="item">
-					<div class="medium">Untitled Game <span class="small">(2008-2009)</span> <span class="right small">C/C++, DirectX</span></div>
+					<div class="medium">
+						<header class="black">Untitled Game</header>
+						<span class="small light">december, 2008 - march, 2009</span>
+						<span class="right small light">C/C++, DirectX</span>
+					</div>
 					<span class="small">
 						unfinished "Diablo" clone
 					</span>
-					<br/>
-					<span>source code:</span>
 					<br/>
 					<span>screenshots:</span> <a href="/g/1.png">[1]</a> <a href="/g/2.png">[2]</a> <a href="/g/3.png">[3]</a>
 				</div>
 			</div>
 			<div class="zvm-container-section">
 				<div class="item">
-					<div class="medium">Iverty: arcade masters<span class="small">(2007-2008)</span> <span class="right small">Flash</span></div>
+					<div class="medium">
+						<header class="black">Iverty</header>
+						<span class="small light">december, 2007 - may, 2008</span>
+						<span class="right small light">Flash</span>
+					</div>
 					<span class="small">
-						"Geometry Wars" clone, created by me before university
+						simple "Geometry Wars" clone game, created by me before university
 					</span>
 					<br/>
 					<span>app url(source code is lost):</span> <a href="http://vk.com/app157172_7049085">http://vk.com/app157172_7049085</a>
 					<br/>
-					<span>screenshots:</span> <a href="i/1.png">[1]</a> <a href="i/2.png">[2]</a> <a href="i/3.png">[3]</a>
+					<span>screenshots:</span>
+						<a href="i/1.png">[1]</a>
+						<a href="i/2.png">[2]</a>
+						<a href="i/3.png">[3]</a>
 				</div>
 			</div>
 			
 		</div>
-		<footer></footer>
+		<footer>
+			<a target=_blank href="mailto:vladimir@zvm.me">zvm.me © Vladimir Zaytsev - Владимир Зайцев, 2011</a>
+		</footer>
 		
 		<script type="text/javascript">
 
