--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,10 @@
 						unfinished "Diablo" clone
 					</span>
 					<br/>
-					<span>screenshots:</span> <a href="/g/1.png">[1]</a> <a href="/g/2.png">[2]</a> <a href="/g/3.png">[3]</a>
+					<span>screenshots:</span> will be available soon
+						<!-- <a href="/g/1.png">[1]</a>
+						<a href="/g/2.png">[2]</a>
+						<a href="/g/3.png">[3]</a> -->
 				</div>
 			</div>
 			<div class="zvm-container-section">
