--- a/projects.html
+++ b/projects.html
@@ -126,6 +126,14 @@
 		</footer>
 		
 		<script type="text/javascript">
+		  (function() {
+		    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+		    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/OADGtFNOiN4CSyQuNUkcQ.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+		  })();
+		</script>
+				
+		<script type="text/javascript">
 
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-22010949-1']);
