--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 			<div class="zvm-container-title">Vladimir Zaytsev</div>
 			<div class="zvm-contacts">
 				<nav>
+					<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
+					<a class="skype" href="skype:vladimir.zvm?call">vladimir.zvm</a>
 					<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
 					<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
 					<a class="github" href="https://github.com/zaycev">Github</a>
 					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
-					<a class="projects" href="projects.html">Projects</a>
 					<a class="cv" href="files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
-					<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
+					<a class="projects" href="projects.html">Projects</a>
 					<a class="phone" href="skype:+79028195844?call">+7-902-81-95844</a>
 				</nav>
 			</div>
