--- a/projects.html
+++ b/projects.html
@@ -57,13 +57,15 @@
 			<div class="zvm-container-section">
 				<div class="item">
 					<div class="medium">
-						<header class="black">NIF JSON Encoder/Decoder</header>
+						<header class="black">rfc4627c</header>
 						<span class="small light">april, 2011 - current</span>
 						<span class="right small light">C, Erlang</span>
 					</div>
 					<span class="small">
-						a fast JSON encoder/decoder capable with erlang's rfc4627 library format
-					</span>
+						written in ANSI C Erlang JSON encoder/decoder working via NIF, capable with erlang's rfc4627 library format</span>
+					<br/>
+					<span>source code:</span> <a href="https://github.com/zaycev/rfc4627c">https://github.com/zaycev/rfc4627c</a>
+					
 				</div>
 			</div>
 			
