--- a/projects.html
+++ b/projects.html
@@ -61,8 +61,7 @@
 						<span class="small light">april, 2011 - current</span>
 						<span class="right small light">C, Erlang</span>
 					</div>
-					<span class="small">
-						written in ANSI C Erlang JSON encoder/decoder working via NIF, capable with erlang's rfc4627 library format</span>
+					<span class="small">fast JSON encoder/decoder written in ANSI C working with Erlang via NIF</span>
 					<br/>
 					<span>source code:</span> <a href="https://github.com/zaycev/rfc4627c">https://github.com/zaycev/rfc4627c</a>
 					
