--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="google-site-verification" content="2y7ZrCwLmzHR7TeLDlLw1NvA5q1hM_k1zaMcKZMw0MM" />
 		<meta name="author" content="Vladimir Zaytsev" />
-		<meta name="description" content="Vladimir Zaytsev. Software engineer from Siberia. Home page." />
+		<meta name="description" content="Vladimir Zaytsev. Home site." />
 		<meta name="keywords" content="vladimir zaytsev, home page, os x, linux, programming, c++, functional programming, erlang, lisp, haskell, programming, software engineering, software developing,  python, cv, программирование, функциональное программирование, владимир зайцев" />
 		<title>Vladimir Zaytsev</title>
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
@@ -24,13 +24,13 @@
 					<a class="github" href="https://github.com/zaycev">Github</a>
 					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
 					<a class="cv" href="files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
-					<a class="projects" href="projects.html">Projects</a>
+					<!-- <a class="projects" href="projects.html">Projects</a> -->
 					<a class="phone" href="skype:+79028195844?call">+7-902-81-95844</a>
 				</nav>
 			</div>
 		</div>
 		<footer>
-			<a target=_blank href="mailto:vladimir@zvm.me">zvm.me © Vladimir Zaytsev - Владимир Зайцев, 2011</a>
+			<a rel="author" href="mailto:vladimir@zvm.me">zvm.me © Vladimir Zaytsev - Владимир Зайцев, 2011</a>
 		</footer>
 		
 		<script type="text/javascript">
