--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="google-site-verification" content="2y7ZrCwLmzHR7TeLDlLw1NvA5q1hM_k1zaMcKZMw0MM" />
 		<meta name="author" content="Vladimir Zaytsev | Projects" />
-		<meta name="description" content="Vladimir Zaytsev. Software engineer from Siberia. Home page." />
+		<meta name="description" content="Vladimir Zaytsev. Home site." />
 		<meta name="keywords" content="vladimir zaytsev, home page, os x, linux, programming, c++, functional programming, erlang, lisp, haskell, programming, software engineering, software developing,  python, cv, программирование, функциональное программирование, владимир зайцев" />
 		<title>Vladimir Zaytsev</title>
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
@@ -123,7 +123,7 @@
 			
 		</div>
 		<footer>
-			<a target=_blank href="mailto:vladimir@zvm.me">zvm.me © Vladimir Zaytsev - Владимир Зайцев, 2011</a>
+			<a rel="author" href="mailto:vladimir@zvm.me">zvm.me © Vladimir Zaytsev - Владимир Зайцев, 2011</a>
 		</footer>
 		
 		<script type="text/javascript">
