--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
 					<a class="github" href="https://github.com/zaycev">Github</a>
 					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
-					<a class="cv" href="files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
+					<a class="cv" href="http://dl.dropbox.com/u/1699417/cv/zaytsev-cv-en.pdf">Curriculum Vitae</a>
 					<!-- <a class="projects" href="projects.html">Projects</a> -->
 					<a class="phone" href="skype:+79028195844?call">RU: +7-902-81-95844</a>
 					<a class="phone" href="skype:5102822826?call">US: 510-282-2826</a>
