--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
 					<a class="skype" href="skype:vladimir.zvm?call">vladimir.zvm</a>
 					<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
+					<a class="google" href="https://plus.google.com/112652629248833418750/posts">Google+</a>
 					<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
 					<a class="github" href="https://github.com/zaycev">Github</a>
 					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
