--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
 					<a class="cv" href="http://dl.dropbox.com/u/1699417/cv/zaytsev-cv-en.pdf">Curriculum Vitae</a>
 					<!-- <a class="projects" href="projects.html">Projects</a> -->
-					<a class="phone" href="skype:+79028195844?call">RU: +7-902-81-95844</a>
-					<a class="phone" href="skype:5102822826?call">US: 510-282-2826</a>
+					<a class="phone" href="skype:+79028195844?call">RU: +7-902-819-5844</a>
+					<a class="phone" href="skype:+15102822826?call">US: +1-510-282-2826</a>
 				</nav>
 			</div>
 		</div>
