--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="google-site-verification" content="2y7ZrCwLmzHR7TeLDlLw1NvA5q1hM_k1zaMcKZMw0MM" />
 		<meta name="author" content="Vladimir Zaytsev" />
-		<meta name="description" content="Vladimir Zaytsev. Home site." />
-		<meta name="keywords" content="vladimir zaytsev, home page, os x, linux, programming, c++, functional programming, erlang, lisp, haskell, programming, software engineering, software developing,  python, cv, программирование, функциональное программирование, владимир зайцев" />
-		<title>Vladimir Zaytsev</title>
+		<meta name="description" content="Vladimir Zaytsev personal webpage" />
+		<meta name="keywords" content="vladimir zaytsev,personal webpage,cv,linux,programming,c++,ansi c,erlang,python,haskell,functional programming,software,engineering,machine learning,data analysis" />
+		<title>Vladimir Zaytsev | Personal webpage</title>
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
@@ -25,7 +25,6 @@
 					<a class="github" href="https://github.com/zaycev">Github</a>
 					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
 					<a class="cv" href="http://dl.dropbox.com/u/1699417/cv/zaytsev-cv-en.pdf">Curriculum Vitae</a>
-					<!-- <a class="projects" href="projects.html">Projects</a> -->
 					<a class="phone" href="skype:+79028195844?call">RU: +7-902-819-5844</a>
 					<a class="phone" href="skype:+15102822826?call">US: +1-510-282-2826</a>
 				</nav>
