--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
 					<a class="cv" href="/files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
 					<a class="phone" href="skype:+79028195844?call">RU: +7-902-819-5844</a>
-					<a class="phone" href="skype:+15102822826?call">US: +1-510-282-2826</a>
+					<s><a class="phone" href="skype:+15102822826?call">US: +1-510-282-2826</a></s>
 				</nav>
 			</div>
 		</div>
