--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="google-site-verification" content="2y7ZrCwLmzHR7TeLDlLw1NvA5q1hM_k1zaMcKZMw0MM" />
 		<meta name="author" content="Vladimir Zaytsev" />
 		<meta name="description" content="Vladimir Zaytsev personal webpage" />
-		<meta name="keywords" content="vladimir zaytsev,personal webpage,cv,linux,programming,c++,ansi c,erlang,python,haskell,functional programming,software,engineering,machine learning,data analysis" />
+		<meta name="keywords" content="vladimir zaytsev, cv, programming, machine learning, information retrieval, software engineering" />
 		<title>Vladimir Zaytsev | Personal webpage</title>
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
 		<link rel="stylesheet" href="css/style.css" />
