--- a/index.html
+++ b/index.html
@@ -8,51 +8,55 @@
 		<meta name="description" content="Vladimir Zaytsev personal webpage" />
 		<meta name="keywords" content="vladimir zaytsev, cv, programming, machine learning, information retrieval, software engineering" />
 		<title>Vladimir Zaytsev | Personal webpage</title>
+		
+		
+		
 		<link type="image/x-icon" href="favicon.png" rel="icon"/>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css.css" />
+		
 	</head>
 	<body>
 		<header></header>
-		<div class="zvm-container" style="width:400px;height:330px;">
-			<div class="zvm-container-title">Vladimir Zaytsev</div>
-			<div class="zvm-contacts">
-				<nav>
-					<a class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</a>
-					<a class="skype" href="skype:vladimir.zvm?call">vladimir.zvm</a>
-					<a class="facebook" href="http://www.facebook.com/vladimir.zaytsev">Facebook</a>
-					<a class="google" href="https://plus.google.com/112652629248833418750/posts">Google+</a>
-					<a class="twitter" href="http://twitter.com/#!/vladimirzaytsev">Twitter</a>
-					<a class="github" href="https://github.com/zaycev">Github</a>
-					<a class="quora" href="http://www.quora.com/Vladimir-Zaytsev">Quora</a>
-					<a class="cv" href="/files/zaytsev-cv-en.pdf">Curriculum Vitae</a>
-					<a class="phone" href="skype:+79028195844?call">RU: +7-902-819-5844</a>
-					<s><a class="phone" href="skype:+15102822826?call">US: +1-510-282-2826</a></s>
-				</nav>
+		<div class="box" style="width:320px;height:200px;margin-top:160px;">
+			
+			<div style="display:block;text-align:left;margin:0 0 0 20px;">
+				<h1 style="font-size:60px;font-family:'Lancelot';">
+					<span style="font-weight:bold;color:rgb(115,0,171);">V</span><span style="font-weight:normal;">ladimir</span>
+				</h1>
 			</div>
+			
+			<div style="display:block;text-align:right;margin:-12px 30px 0 0;">
+				<h1 style="font-size:60px;font-family:'Lancelot';">
+					<span style="font-weight:bold;color:rgb(115,0,171);">Z</span><span style="font-weight:normal;">aytsev</span>
+				</h1>
+			</div>
+		
+			<table class="social" style="margin-top:20px;">
+			
+				<tr>
+					<td><a title="Email" class="email" href="mailto:vladimir@zvm.me"></a></td>
+					<td><a title="Curriculum Vitae " class="cv" href="/files/zaytsev-cv.pdf"></a></td>
+					<td><a title="Skype" class="skype" href="skype:vladimir.zvm?call"></a></td>
+					<td><a title="Facebook" class="facebook" href="http://www.facebook.com/vladimir.zaytsev"></a></td>
+					<td><a title="GitHub" class="github" href="https://github.com/zaycev"></a></td>
+					<td><a title="Quora" class="quora" href="http://www.quora.com/Vladimir-Zaytsev"></a></td>
+					<td><a title="Google Plus" class="google" href="https://plus.google.com/112652629248833418750/posts"></a></td>
+					<td><a title="Twitter" class="twitter" href="http://twitter.com/#!/vladimirzaytsev"></a></td>
+				</tr>
+			
+			</table>
+		
 		</div>
-		<footer>
-			<a rel="author" href="mailto:vladimir@zvm.me">zvm.me © Vladimir Zaytsev - Владимир Зайцев, 2011</a>
-		</footer>
 		
 		<script type="text/javascript">
-		  (function() {
-		    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
-		    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/OADGtFNOiN4CSyQuNUkcQ.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
-		  })();
-		</script>
-				
-		<script type="text/javascript">
-
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-22010949-1']);
-		  _gaq.push(['_trackPageview']);
-
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-22010949-1']);
+			_gaq.push(['_trackPageview']);
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
 		</script>
 	</body>
 </html>
