--- a/index.html
+++ b/index.html
@@ -1,53 +1,8 @@
 <!DOCTYPE HTML>
-
-<html>
-	<head>		
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta name="google-site-verification" content="2y7ZrCwLmzHR7TeLDlLw1NvA5q1hM_k1zaMcKZMw0MM" />
-		<meta name="author" content="Vladimir Zaytsev" />
-		<meta name="description" content="Vladimir Zaytsev" />
-		<meta name="keywords" content="vladimir zaytsev, cv, programming, machine learning, information retrieval, software engineering" />
-		<title>Vladimir Zaytsev</title>
-		<link type="image/x-icon" href="favicon.png" rel="icon"/>
-		<style type="text/css">
-			a{color:#555;text-decoration:none;}a:hover{text-decoration:underline;}ol{list-style:decimal;}ul{list-style:none;}li{margin-left:0;}html{overflow-y:scroll;}body{font:14px "Droid Sans";line-height:24px;color:#000;padding:0;margin:0;background:#f5f5f5;}.box{margin:auto;padding:28px;background-color:#FFF;border-radius:5px;padding:20px;background:white;border:1px solid #ccc;box-shadow:0 0 8px #aaa;}.social{width:160px;margin:65px auto 0 auto;}.social a{display:block;width:16px;height:16px;margin:2px;opacity:.6;background-repeat:no-repeat;}.social a:hover{opacity:1;}.facebook{background-image:url('img/facebook.png');}.google{background-image:url('img/google.png');}.twitter{background-image:url('img/twitter.png');}.github{background-image:url('img/github.png');}.quora{background-image:url('img/quora.png');}.email{background-image:url('img/email.png');}.skype{background-image:url('img/skype.png');}.cv{background-image:url('img/cv.png');}@font-face{font-family:'Lancelot';font-style:normal;font-weight:400;src:local('Lancelot'),url('font.woff') format('woff');}
-		</style>
-	</head>
-	<body>
-		<header></header>
-		<div class="box" style="width:320px;height:200px;margin-top:160px;">
-			<div style="display:block;text-align:left;margin:0 0 0 20px;">
-				<h1 style="font-size:60px;font-family:'Lancelot';">
-					<span style="font-weight:bold;color:rgb(115,0,171);">V</span><span style="font-weight:normal;">ladimir</span>
-				</h1>
-			</div>
-			<div style="display:block;text-align:right;margin:-12px 30px 0 0;">
-				<h1 style="font-size:60px;font-family:'Lancelot';">
-					<span style="font-weight:bold;color:rgb(115,0,171);">Z</span><span style="font-weight:normal;">aytsev</span>
-				</h1>
-			</div>
-			<table class="social" style="margin-top:20px;">
-				<tr>
-					<td><a title="Email" class="email" href="mailto:vladimir@zvm.me"></a></td>
-					<td><a title="Curriculum Vitae " class="cv" href="/files/zaytsev-cv.pdf"></a></td>
-					<td><a title="Skype" class="skype" href="skype:vladimir.zvm?call"></a></td>
-					<td><a title="Facebook" class="facebook" href="http://www.facebook.com/vladimir.zaytsev"></a></td>
-					<td><a title="GitHub" class="github" href="https://github.com/zaycev"></a></td>
-					<td><a title="Quora" class="quora" href="http://www.quora.com/Vladimir-Zaytsev"></a></td>
-					<td><a title="Google Plus" class="google" href="https://plus.google.com/112652629248833418750/posts"></a></td>
-					<td><a title="Twitter" class="twitter" href="http://twitter.com/#!/vladimirzaytsev"></a></td>
-				</tr>
-			</table>
-		</div>
-		<script type="text/javascript">
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-22010949-1']);
-			_gaq.push(['_trackPageview']);
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-		</script>
-	</body>
-</html>
+This page is under construction since May 9 2012.
+<br/>
+<ul>
+	<li><a title="Email" class="email" href="mailto:vladimir@zvm.me">vladimir@zvm.me</li>
+	<li><a title="Curriculum Vitae" class="cv" href="/files/zaytsev-cv.pdf">cv</a></li>
+	<li>facebook <a title="Facebook" class="facebook" href="http://www.facebook.com/vladimir.zaytsev">profile</a></li>
+</ul>
