--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-
+<head>
+	<title>Vladimir M. Zaytsev</title>
+</head>
 <body>
 	<h1 style="font-size:14px;">Vladimir M. Zaytsev</h1>
-	I solve problems.<br/>
 	===
 	<br/>
-
 	<ul>
 		<li>e-mail:
 			<a title="Email" class="email" href="mailto:zaytsev@usc.edu">
@@ -22,7 +22,7 @@
 		</li>
 		<li>facebook: <a title="facebook" class="facebook" href="http://www.facebook.com/vladimir.zaytsev">profile</a></li>
 	</ul>
-
+	I solve problems.
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-22010949-1']);
