--- a/archives.html
+++ b/archives.html
@@ -1,12 +1,10 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700' rel='stylesheet' type='text/css' />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title> Vova Zaytsev </title>
+    <title> Archive | Vova Zaytsev </title>
 
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css" />
     <link rel="stylesheet" href="/theme/css/pygments.css" type="text/css" />
@@ -50,16 +48,13 @@
       </div>
       <div class=separator></div>        
         <div class=body>
+<h1> Archive </h1>
 
-    <div class=entry-overview>
-      <div class=date>Nov 12, 2013</div>
-      <div class=detail>
-          <h1><a href="/mathjax-test.html">MathJAX Test</a></h1>
-          <div class=summary><p> </p></div>
-      </div>
-    </div>
-
-
+<h2>2013</h2>
+<h3>November</h3>
+<ul>
+  <li><a href="/mathjax-test.html">MathJAX Test</a></li>
+</ul>
         </div>
         
 <div class=footer>
