--- a/categories.html
+++ b/categories.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -50,16 +48,9 @@
       </div>
       <div class=separator></div>        
         <div class=body>
-
-    <div class=entry-overview>
-      <div class=date>Nov 12, 2013</div>
-      <div class=detail>
-          <h1><a href="/mathjax-test.html">MathJAX Test</a></h1>
-          <div class=summary><p> </p></div>
-      </div>
-    </div>
-
-
+<ul>
+    <li><a href="/category/entries.html">Entries</a></li>
+</ul>
         </div>
         
 <div class=footer>
