--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -1,12 +1,10 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700' rel='stylesheet' type='text/css' />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title> Vova Zaytsev </title>
+    <title> About me | Vova Zaytsev </title>
 
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css" />
     <link rel="stylesheet" href="/theme/css/pygments.css" type="text/css" />
@@ -50,16 +48,11 @@
       </div>
       <div class=separator></div>        
         <div class=body>
+    <div class='page'>
+        <h1> About me </h1>
+        <p>This is an about page!</p>
 
-    <div class=entry-overview>
-      <div class=date>Nov 12, 2013</div>
-      <div class=detail>
-          <h1><a href="/mathjax-test.html">MathJAX Test</a></h1>
-          <div class=summary><p> </p></div>
-      </div>
     </div>
-
-
         </div>
         
 <div class=footer>
