--- a/tags.html
+++ b/tags.html
@@ -44,14 +44,17 @@
 
       <div class=navigation>
         <ul>
+            <li><a href="/index.html">Stories</a> </li>
+            <li><a href="/tags.html">Tags</a> </li>
+            <li><a href="/pages/about-me.html">About</a> </li>
         </ul>
       </div>
       <div class=separator></div>        
         <div class=body>
 <h1> Tags </h1>
 <ul class=tagcloud>
-        <li class="tag-4"><a href="/tag/algorithm.html">algorithm</a></li>
         <li class="tag-4"><a href="/tag/svm.html">svm</a></li>
+        <li class="tag-4"><a href="/tag/algorithm.html">algorithm</a></li>
         <li class="tag-4"><a href="/tag/ml.html">ml</a></li>
 </ul>
         </div>
@@ -65,15 +68,15 @@
     <div class=social style="font-size: 27px;">
       <ul>
         <script language="JavaScript">
-          u = '';
-          s = '';
+          u = 'zaytsev';
+          s = 'usc.edu';
           document.write('<a href=\"mailto:' + u + '@' + s + '\" target=\"_blank\">');
         </script>
             <li><i class="icon-envelope icon-large"></i> </li>
         </a>
-        <a href="http://twitter.com/" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
-        <a href=""><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
-        <a href="" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
+        <a href="http://twitter.com/vladimirzaytsev" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
+        <a href="http://www.linkedin.com/pub/vladimir-zaytsev/2b/32a/106"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
+        <a href="http://github.com/zaycev" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
         <a href="/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
       </ul>
     </div>
