--- a/categories.html
+++ b/categories.html
@@ -52,7 +52,7 @@
       <div class=separator></div>        
         <div class=body>
 <ul>
-    <li><a href="/category/entries.html">Entries</a></li>
+    <li><a href="/category/stories.html">Stories</a></li>
 </ul>
         </div>
         
