--- a/tags.html
+++ b/tags.html
@@ -53,9 +53,11 @@
         <div class=body>
 <h1> Tags </h1>
 <ul class=tagcloud>
-        <li class="tag-4"><a href="/tag/ml.html">ml</a></li>
-        <li class="tag-4"><a href="/tag/svm.html">svm</a></li>
-        <li class="tag-4"><a href="/tag/algorithm.html">algorithm</a></li>
+        <li class="tag-4"><a href="/tag/computer-science.html">computer science</a></li>
+        <li class="tag-4"><a href="/tag/todo.html">todo</a></li>
+        <li class="tag-4"><a href="/tag/read.html">read</a></li>
+        <li class="tag-4"><a href="/tag/algorithms.html">algorithms</a></li>
+        <li class="tag-4"><a href="/tag/olya.html">olya</a></li>
 </ul>
         </div>
         
