--- a/tags.html
+++ b/tags.html
@@ -53,11 +53,11 @@
         <div class=body>
 <h1> Tags </h1>
 <ul class=tagcloud>
-        <li class="tag-4"><a href="/tag/algorithms.html">algorithms</a></li>
-        <li class="tag-4"><a href="/tag/olya.html">olya</a></li>
-        <li class="tag-4"><a href="/tag/todo.html">todo</a></li>
+        <li class="tag-4"><a href="/tag/algorithm.html">algorithm</a></li>
         <li class="tag-4"><a href="/tag/computer-science.html">computer science</a></li>
         <li class="tag-4"><a href="/tag/read.html">read</a></li>
+        <li class="tag-4"><a href="/tag/olya.html">olya</a></li>
+        <li class="tag-4"><a href="/tag/todo.html">todo</a></li>
 </ul>
         </div>
         
@@ -84,5 +84,16 @@
     </div>
   </p>
 </div>    </div>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-47310787-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
