--- a/archives.html
+++ b/archives.html
@@ -61,27 +61,65 @@
         </div>
         
 <div class=footer>
-  <p>&copy; Copyright <script language="JavaScript">var date = new Date(); document.write(date.getFullYear());</script> by Vladimir Zaytsev</p>
-  <p> Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
-    <a href="https://github.com/fjavieralba/flasky">Theme</a>  by <a href="http://fjavieralba.com">fjavieralba</a>
-  </p> 
-  <p>
-    <div class=social style="font-size: 27px;">
-      <ul>
-        <script language="JavaScript">
-          u = 'zaytsev';
-          s = 'usc.edu';
-          document.write('<a href=\"mailto:' + u + '@' + s + '\" target=\"_blank\">');
-        </script>
-            <li><i class="icon-envelope icon-large"></i> </li>
+    <div class="copyright">
+        &copy; Vladimir Zaytsev
+        <a class="license"
+           rel="license"
+           href="http://creativecommons.org/licenses/by/4.0/deed.en_US">
+            <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/4.0/80x15.png" />
         </a>
-        <a href="http://twitter.com/vladimirzaytsev" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
-        <a href="http://www.linkedin.com/pub/vladimir-zaytsev/2b/32a/106"><li><i class="icon-linkedin-sign icon-large" ></i></li></a>
-        <a href="http://github.com/zaycev" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
-        <a href="/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
-      </ul>
     </div>
-  </p>
+    <div>
+        Powered by <a href="http://blog.getpelican.com/">Pelican</a>
+    </div>
+<!--
+    <p>
+        <div class=social style="font-size: 27px;">
+            <ul>
+                <script language="JavaScript">
+                    u = 'zaytsev';
+                    s = 'usc.edu';
+                    document.write('<a href=\"mailto:' + u + '@' + s + '\" target=\"_blank\">');
+                </script>
+                    <li>
+                        <i class="icon-envelope icon-large"></i>
+                    </li>
+                </a>
+                <a href="http://twitter.com/vladimirzaytsev" target="_blank">
+                    <li>
+                        <i class="icon-twitter-sign icon-large"> </i> 
+                    </li>
+                </a>
+                <a href="http://www.linkedin.com/pub/vladimir-zaytsev/2b/32a/106">
+                    <li>
+                        <i class="icon-linkedin-sign icon-large" ></i>
+                    </li>
+                </a>
+                <a href="http://github.com/zaycev" target="_blank">
+                    <li>
+                        <i class="icon-github-sign icon-large"></i>
+                    </li>
+                </a>
+                <a href="/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts">
+                    <li>
+                        <i class="icon-rss icon-large"></i>
+                    </li>
+                </a>
+            </ul>
+        </div>
+    </p>
+-->
+    <p>
+        <nav class="social-networks">
+            <ul>
+                <li><a class="tw" href="http://twitter.com/vladimirzaytsev">Twitter</a></li>
+                <li><a class="fb" href="https://www.facebook.com/vladimir.zaytsev">Facebook</a></li>
+                <li><a class="vk" href="http://vk.com/vladimir.zaytsev">Vkontakte</a></li>
+                <li><a class="ig hover" href="http://instagram.com/metanerd">Instagram</a></li>
+                <li><a class="li" href="http://www.linkedin.com/pub/vladimir-zaytsev/2b/32a/106">LinkedIn</a></li>
+            </ul>
+        </nav>
+    </p>
 </div>    </div>
     <script type="text/javascript">
       var _gaq = _gaq || [];
