--- a/about/index.html
+++ b/about/index.html
@@ -103,7 +103,7 @@
 
 <p>I’m a software developer at A9 (an Amazon company). My research and study background is in natural language processing and machine learning fields. I specialize in large-scale machine learning approaches for real-world situations.</p>
 
-<p>I got my MS degree in Computer Science from University of Southern California. There, I have completed on several research projects working with  Jerry Hobbs, Katya Ovchinnikova, Yu-Han Chang, Rajiv Maheswaran and Kevin Knight.</p>
+<p>I got my MS degree in Computer Science from University of Southern California. There, I have completed several research projects working with  Jerry Hobbs, Katya Ovchinnikova, Yu-Han Chang, Rajiv Maheswaran and Kevin Knight.</p>
 
 <p>Here is my brief background in chronological order:</p>
 
