--- a/about/index.html
+++ b/about/index.html
@@ -101,9 +101,9 @@
 
 <p>My name is Vladimir (Vova) Zaytsev.</p>
 
-<p>I’m a software developer at A9 (an Amazon company). My research and study background is in natural language processing and machine learning fields. I specialize in large-scale machine learning approaches for real-world situations.</p>
+<p>I’m a software developer at A9 (an Amazon company).  I currently reside in Palo Alto, California. My research and study background is in natural language processing and machine learning fields. I specialize in large-scale machine learning approaches for real-world situations.</p>
 
-<p>I got my MS degree in Computer Science from University of Southern California. There, I have completed several research projects working with  Jerry Hobbs, Katya Ovchinnikova, Yu-Han Chang, Rajiv Maheswaran and Kevin Knight.</p>
+<p>I got my MS degree in Computer Science from University of Southern California. There and at ISI, I have completed several research projects working with Jerry Hobbs, Katya Ovchinnikova, Yu-Han Chang, Rajiv Maheswaran and Kevin Knight.</p>
 
 <p>Here is my brief background in chronological order:</p>
 
