--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 
   
-  <meta property="og:url" content="https://vladimir.io/" />
+  <meta property="og:url" content="https://zaycev.github.io/" />
 
   
   
@@ -44,7 +44,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/style.css">
 
-  <link rel="canonical" href="https://vladimir.io/">
+  <link rel="canonical" href="https://zaycev.github.io/">
 
   
   <link rel="alternate" type="application/rss+xml" title="Vladimir Zaytsev" href="/feed.xml" />
